--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,26 @@
   >
     <div style="width: 190px; display: flex; align-items: center;">
         <div class="triangle">
-            <span matTooltipClass="tooltip-beta-red" matTooltip="Este es un producto BETA configurado con propósitos de prueba:
+            <span matTooltipClass="tooltip-beta-red" matTooltip="Este es un producto BETA configurado con propósitos de prueba.
             Algunas características pueden no funcionar correctamente."> <strong> BETA </strong> </span>
         </div>
         <a class="color-white" [routerLink]="['/']" style="white-space: normal;">
-            <img src="assets/images/sceiba-logo-white.png" alt="Sceiba" width="120">
+            <img src="assets/icons/sceiba_white.svg" alt="Sceiba" style="height: 40px; width: 40px">
         </a>
+        <button mat-icon-button [matMenuTriggerFor]="menuApps" matTooltip="Aplicaciones">
+          <mat-icon>apps</mat-icon>
+        </button>
+    </div>
+    <div
+      appearance="legacy"
+      aria-label="Menu de Inicio"
+      fxLayout="row wrap"
+      fxLayoutGap="15px"
+    >
+    <a class="color-white" [routerLink]="['/']" style="white-space: normal">
+      Sceiba
+
+    </a>
     </div>
 
     <div
@@ -25,28 +39,17 @@
         fxLayoutGap="15px"
     >
 
-          <button mat-icon-button [matMenuTriggerFor]="menuHelp" matTooltip="Ayuda">
-              <mat-icon class="mat-18">help</mat-icon>
-          </button>
-
-          <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="">
-              <mat-icon class="mat-18">more_vert</mat-icon>
-          </button>
-            <button mat-icon-button [matMenuTriggerFor]="menuApps" matTooltip="Aplicaciones">
-                <mat-icon>apps</mat-icon>
-            </button>
-
-            <button mat-icon-button [matMenuTriggerFor]="menuNetwork" matTooltip="Redes Sociales">
+            <!-- <button mat-icon-button [matMenuTriggerFor]="menuNetwork" matTooltip="Redes Sociales">
                 <mat-icon>share</mat-icon>
-            </button>
+            </button> -->
 
             <button mat-icon-button [matMenuTriggerFor]="menuHelp" matTooltip="Ayuda">
                 <mat-icon class="mat-18">help</mat-icon>
             </button>
 
-          <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="">
-              <mat-icon class="mat-18">more_vert</mat-icon>
-          </button>
+            <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="Usuario">
+                <mat-icon class="mat-18">account_circle</mat-icon>
+            </button>
 
     </div>
 
@@ -55,34 +58,33 @@
 </mat-toolbar>
 
 
-<mat-menu #menuNetwork="matMenu">
+<!-- <mat-menu #menuNetwork="matMenu">
   <a mat-menu-item href="https://www.facebook.com/sceiba/" target="_blank">
-      <!-- <mat-icon>info</mat-icon> -->
       Facebook
   </a>
   <a mat-menu-item href="https://twitter.com/SceibaCu" target="_blank">
-      <!-- <mat-icon>question_answer</mat-icon> -->
       Twitter
   </a>
-  <a mat-menu-item href="https://github.com/tocororo/iroko" target="_blank">
-      <!-- <mat-icon>question_answer</mat-icon> -->
+  <a mat-menu-item href="https://github.com/tocororo"
+    target="_blank">
       GitHub
   </a>
-</mat-menu>
+</mat-menu> -->
 
 <mat-menu #menuHelp="matMenu">
   <!-- <a mat-menu-item [routerLink]="['/help']">
       <mat-icon>help_outline</mat-icon>
       Ayuda
   </a> -->
-  <a mat-menu-item [routerLink]="['/faq']">
-      <mat-icon>question_answer</mat-icon>
-      FAQs
-  </a>
   <a mat-menu-item [routerLink]="['/about']">
-      <mat-icon>info</mat-icon>
-      Acerca de
+    <mat-icon>info</mat-icon>
+    Acerca de
   </a>
+  <a mat-menu-item [routerLink]="['/policy']">
+      <mat-icon>security</mat-icon>
+      Privacidad
+  </a>
+
   <a mat-menu-item [routerLink]="['/contact']">
       <mat-icon>contacts</mat-icon>
       Contactos
@@ -102,22 +104,24 @@
   </mat-menu>
 
 <mat-menu #menuApps="matMenu">
-<div fxLayout="row wrap" fxLayoutAlign="space-around center">
+  <div fxLayout="row wrap" fxLayoutAlign="space-around center">
     <a href="https://sceiba.cu" target="__blanck" class="apps" matTooltip="Sceiba">
-        <img src="/assets/images/sceiba-logo-tree.png" alt="Sceiba">
-    </a>
-    <a href="https://orgs.sceiba.cu" target="__blanck" class="apps" matTooltip="Organizaciones">
-        <img src="/assets/images/home/organizacion.svg" alt="Organizaciones">
-    </a>
-    <a href="https://sceiba.cu" target="__blanck" class="apps" matTooltip="Vocabularios">
-        <img src="/assets/images/home/checklist_icon.png" alt="Vocabularios">
-    </a>
-    <a href="https://catalogo.sceiba.cu" target="__blanck" class="apps" matTooltip="Catálogo">
-        <img src="/assets/images/home/archives_icon.png" alt="Catálogo">
+        <img  class="app-featured" src="/assets/icons/sceiba.svg" alt="Sceiba" style="width: 55px; height: 55px;">
     </a>
     <mat-divider class="w-90"></mat-divider>
-    <a href="https://sceiba.cu" target="__blanck" class="apps">
-        <img class="MES" src="/assets/images/mes.png" alt="Registro de Revistas Científicas del MES" matTooltip="Registro de Revistas Científicas del MES">
+
+    <a href="https://catalogo.sceiba.cu" target="__blanck" class="apps" matTooltip="Catálogo">
+      <img src="/assets/icons/catalog.svg" alt="Catálogo" style="width: 55px; height: 55px;">
+    </a>
+    <a href="https://orgs.sceiba.cu" target="__blanck" class="apps" matTooltip="Organizaciones">
+        <img src="/assets/icons/organizacion.svg" alt="Organizaciones" style="width: 55px; height: 55px;">
+    </a>
+    <a href="https://vocs.sceiba.cu" target="__blanck" class="apps" matTooltip="Vocabularios">
+        <img src="/assets/icons/vocabs.svg" alt="Vocabularios" style="width: 55px; height: 55px;">
+    </a>
+    <mat-divider class="w-90"></mat-divider>
+    <a href="https://sceiba.cu" target="__blanck" class="apps"  matTooltip="Registro de Revistas Científicas del MES">
+        <img class="app-featured" src="/assets/icons/mes.svg" alt="Registro de Revistas Científicas del MES" style="width: 55px; height: 55px;">
     </a>
 </div>
 </mat-menu>
