--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,12 +4,12 @@
     fxLayout.xs="column"
     fxLayoutAlign="space-between center"
     style="height: 80px;">
-  
-    <span>Búsqueda</span>
-  
-    <div *ngIf="search_type; then search_list_button else search_charts_button"></div>
 
-    <ng-template #search_list_button>
+    <span>Búsqueda</span>
+
+    <!-- <div *ngIf="search_type; then search_list_button else search_charts_button"></div> -->
+
+    <!-- <ng-template #search_list_button>
       <button mat-icon-button  matTooltip="Estadisticas" (click)="changeView()">
         <mat-icon>insert_chart</mat-icon>
       </button>
@@ -19,7 +19,7 @@
       <button mat-icon-button  matTooltip="Búsqueda" (click)="changeView()">
         <mat-icon>list</mat-icon>
       </button>
-    </ng-template>
+    </ng-template> -->
 
 </mat-toolbar>
 
@@ -29,14 +29,14 @@
     <mat-drawer #drawer mode="side" opened position="start">
      <!--  <app-aggregations fxLayout="row wrap" fxLayout.xs="column wrap" fxFlex="{{ currentlayout.width }}"
         fxLayoutAlign="start center" fxLayoutAlign.xs="center center" fxLayoutGap="1em"
-        class=" back-grey mat-elevation-z8"></app-aggregations> 
+        class=" back-grey mat-elevation-z8"></app-aggregations>
       <toco-org-search></toco-org-search>  -->
       <toco-search-aggregations
         *ngIf="sr"
         [aggregations]="sr.aggregations"
         [selectedAggr]="aggrsSelection"
         (keySelect)="aggrChange($event)"
-  
+
       ></toco-search-aggregations>
 
       <!-- <toco-search-aggregations-visual
@@ -45,7 +45,7 @@
         [selectedAggr]="aggrsSelection"
         (keySelect)="aggrChange($event)"
       ></toco-search-aggregations-visual> -->
-     
+
     </mat-drawer>
 
     <div *ngIf="search_type; then search_list else search_charts">{{search_type}}</div>
@@ -66,6 +66,14 @@
       <toco-search-query-input [query]="query" class="p-1" (queryChange)="queryChange($event)" style="width: 100%;"></toco-search-query-input>
     </div>
 
+    <mat-paginator
+      [length]="sr.hits.total"
+      [pageSize]="pageSize"
+      [pageIndex]="pageIndex"
+      [pageSizeOptions]="pageSizeOptions"
+      (page)="pageChange($event)"
+    >
+    </mat-paginator>
 
     <search-list [hitList]="sr.hits"></search-list>
 
@@ -104,7 +112,7 @@
          </mat-radio-group> -->
         <!-- </section> -->
       </mat-card>
-      
+
     </div>
 
     <toco-search-aggregations-visual
@@ -118,4 +126,3 @@
 </ng-template>
 
   </mat-drawer-container>
-  
