--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,15 +2,12 @@
 
     <mat-toolbar class="footer-height" fxLayout='row wrap' fxLayout.mx="column" fxLayoutAlign="center center" color="primary">
 
-        <mat-toolbar-row 
+        <mat-toolbar-row
             fxLayout='row wrap'
             fxLayout.mx="column"
             fxLayoutAlign="center center"
             fxLayoutGap="20px"
         >
-            <div fxFlex="25%" fxFlex.xs="100%" fxLayoutAlign="center center">
-                <img src="/assets/images/tocororo.png" alt="Tocororo" width="170" height="170">
-            </div>
             <div fxLayout='column wrap' fxFlex="40%" fxFlex.xs="100%">
                 <span [ngStyle.xs]="{'text-align': 'justify'}">
                     Sceiba  busca mantener datos estandarizados, validados y por tanto confiables sobre los resultados de investigación en Cuba, de diferentes organizaciones de investigación, mayormente académicas.
@@ -23,11 +20,11 @@
                 <a mat-mini-fab href="https://twitter.com/SceibaCu" target="_blank" color="accent" matTooltip="Twitter">
                     <mat-icon svgIcon="twitter" class="mat-18"></mat-icon>
                 </a>
-                <a mat-mini-fab href="https://github.com/tocororo/iroko" target="_blank" color="accent" matTooltip="GitHub">
+                <a mat-mini-fab href="https://github.com/tocororo" target="_blank" color="accent" matTooltip="GitHub">
                     <mat-icon svgIcon="github" class="mat-18">home</mat-icon>
                 </a>
             </div>
-            
+
         </mat-toolbar-row>
         <mat-toolbar-row>
             <div fxLayout='row wrap' fxLayout.xs='column' fxLayoutAlign="center center" fxFlex="100%" style="margin-top: 1em;">
@@ -35,7 +32,7 @@
                 <ng-container *ngFor="let item of information">
                     <a mat-button
                         class="aling-left"
-                        
+
                         [routerLink]="[item.url]"
                         *ngIf="item.useRouterLink"
                         [ngStyle.xs]="{'line-height': 'initial', 'padding': '10px 16px', 'width': '100%', 'text-align': 'center'}"
@@ -44,7 +41,7 @@
                     </a>
                     <a mat-button
                         class="aling-left"
-                        
+
                         *ngIf=" ! item.useRouterLink"
                         href="{{ item.url }}"
                         target="_blank"
@@ -74,6 +71,10 @@
             Desarrollado con Invenio
         </a>
     </mat-toolbar>
+    <mat-toolbar fxLayoutAlign="center center" fxLayout='column wrap' >
+  <img src="/assets/images/tocororo.png" alt="Tocororo" width="50" height="50">
+  <span class="text-initial" style="max-width: 30em; text-align: center;">Proyecto Tocororo, un esfuerzo por la comunicación científica en Cuba. </span>
+</mat-toolbar>
 </div>
 
 <!-- <span class="text-initial" style="max-width: 30em; text-align: center;">Proyecto Nacional Tocororo, un esfuerzo por la comunicación científica en Cuba. </span> -->
