--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -67,9 +67,9 @@
         <a href="https://sceiba.cu" style="color: rgb(0, 0, 0, 0.87); text-decoration: none; text-align: center;">
             Portal de publicaciones cientificas cubanas.
         </a>
-        <a href="https://invenio-software.org/" target="_blank" style="color: rgb(0, 0, 0, 0.87); text-decoration: none; text-align: center;">
+        <!-- <a href="https://invenio-software.org/" target="_blank" style="color: rgb(0, 0, 0, 0.87); text-decoration: none; text-align: center;">
             Desarrollado con Invenio
-        </a>
+        </a> -->
     </mat-toolbar>
     <mat-toolbar fxLayoutAlign="center center" fxLayout='column wrap' >
   <img src="/assets/images/tocororo.png" alt="Tocororo" width="50" height="50">
