--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,21 @@
 
-<mat-toolbar class="mat-elevation-z6" color="primary" style="position: relative; z-index: 2;">
+<mat-toolbar class="mat-elevation-z8" style="position: relative; z-index: 2;">
 
   <mat-toolbar-row
       fxLayout="row wrap"
       fxLayoutAlign="space-between center"
       style="height: auto !important; min-height: 80px;"
   >
-    <div style="width: 190px; display: flex; align-items: center;">
-        <div class="triangle">
-            <span matTooltipClass="tooltip-beta-red" matTooltip="Este es un producto BETA configurado con propósitos de prueba.
-            Algunas características pueden no funcionar correctamente."> <strong> BETA </strong> </span>
-        </div>
-        <a class="color-white" [routerLink]="['/']" style="white-space: normal;">
-            <img src="/assets/images/sceiba-logo-white.png" alt="Sceiba" style="height: 40px;">
-        </a>
+  <div style="width: 330px; display: flex; align-items: center;">
+    <div class="triangle">
+        <span matTooltipClass="tooltip-beta-red" matTooltip="Este es un producto BETA configurado con propósitos de prueba.
+        Algunas características pueden no funcionar correctamente."> <strong> BETA </strong> </span>
     </div>
-    <div
-      appearance="legacy"
-      aria-label="Menu de Inicio"
-      fxLayout="row wrap"
-      fxLayoutGap="15px"
-    >
-    <!-- <a class="color-white" [routerLink]="['/']" style="white-space: normal">
-      Sceiba
-
-    </a> -->
-    </div>
-
+    <a mat-button [routerLink]="['/']" style="white-space: normal; display: flex; align-items: center;">
+        <img src="/assets/icons/logo.sceiba.letras.svg" alt="Sceiba" style="height: 50px; margin-right: 6px;">        
+    </a>
+  </div>
+    
     <div
         class="center-elements"
         appearance="legacy"
@@ -36,20 +25,21 @@
         fxLayoutGap="15px"
     >
 
-      <button mat-icon-button [matMenuTriggerFor]="menuApps" matTooltip="Aplicaciones">
-        <mat-icon>apps</mat-icon>
-      </button>
-      <!-- <button mat-icon-button [matMenuTriggerFor]="menuNetwork" matTooltip="Redes Sociales">
-          <mat-icon>share</mat-icon>
-      </button> -->
+            <!-- <button mat-icon-button [matMenuTriggerFor]="menuNetwork" matTooltip="Redes Sociales">
+                <mat-icon>share</mat-icon>
+            </button> -->
 
-      <button mat-icon-button [matMenuTriggerFor]="menuHelp" matTooltip="Ayuda">
-          <mat-icon class="mat-18">help</mat-icon>
-      </button>
+            <button mat-icon-button [matMenuTriggerFor]="menuApps" matTooltip="Aplicaciones">
+              <mat-icon>apps</mat-icon>
+            </button>
 
-      <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="Usuario">
-          <mat-icon class="mat-18">account_circle</mat-icon>
-      </button>
+            <button mat-icon-button [matMenuTriggerFor]="menuHelp" matTooltip="Ayuda">
+                <mat-icon class="mat-18">help</mat-icon>
+            </button>
+
+            <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="Usuario">
+                <mat-icon class="mat-18">account_circle</mat-icon>
+            </button>
 
     </div>
 
@@ -126,8 +116,17 @@
 </div>
 </mat-menu>
 
-<router-outlet></router-outlet>
+<div *ngIf="!isHome" style="height: 200px; width: 100%; background: linear-gradient(to right, #007e3e, #373131);">
 
-<div  [ngStyle]="{'margin-top': '2em'}">
-  <app-footer [sites]="footerSites" [information]="footerInformation"></app-footer>
 </div>
+<div *ngIf="!isHome" fxLayout="row" fxLayoutAlign="center center" style="border-radius: 40px 40px 0 0;">
+  <div [ngStyle.xs]="{width: '95%'}" style="margin-top: -100px; width: 90%; background-color: white; border-radius: 40px 40px 0 0; box-shadow: 0px 5px 15px rgb(0,0,0,0.088)">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
+<router-outlet *ngIf="isHome"></router-outlet>
+
+<!--<div [ngStyle]="{'margin-top': '2em'}"> -->
+  <app-footer [sites]="footerSites" [information]="footerInformation"></app-footer>
+<!-- </div> -->
