--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,9 +1,39 @@
+.main-sceiba {
+    background-image: url("/assets/icons/sceiba.top.svg");
+    background-repeat: no-repeat;    
+    background-position: center top;
+    background-size: contain;
+    -webkit-backdrop-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+}
+
 .a-grey{
     color: #000;
     text-decoration: none;
 }
 .a-grey:hover{
     text-decoration: underline;
+}
+.pt-5{
+    padding-top: 5px;    
+}
+.pt-20{
+    padding-top: 20px;    
+}
+.pt-30{
+    padding-top: 30px;    
+}
+.pt-50{
+    padding-top: 50px;    
+}
+
+.pb-20{
+    padding-bottom: 20px;
+}
+.ph-10 {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .w-20{
     width: 25%;
@@ -15,6 +45,10 @@
 }
 .w-80{
     width: 80%;
+    min-width: 15em;
+}
+.w-100 {
+    width: 100%;
     min-width: 15em;
 }
 .text-center{
@@ -53,12 +87,14 @@
     padding: 16px;
 }
 .aling-center{
-    margin: 1em;
-    max-width: 12em;
+    margin: 0.5em;
+    max-width: 8em;
+    text-align: center;
 }
 
 .w-img{
-    width: 120px;
+    width: 100px;
+    border-radius: 50%;
 }
 
 /***** SLIDES *****/
@@ -67,9 +103,12 @@
 
 /* Slideshow container */
 .container {
-    max-width: 1000px;
+    //max-width: 500px;
+    min-height: 300px;
     position: relative;
-    margin: auto;
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .container img {vertical-align: middle;}
@@ -84,8 +123,9 @@
     color: white;
     padding: 16px;
 }
+
 .container p {
-    font-size: xx-large;
+    font-size: medium;
 }
 
 /* Next & previous buttons */
@@ -116,9 +156,9 @@
 .text {
     color: #ffffff;
     font-size: xx-large;
-    padding: 8px 25px;
+    padding: 10px 50px;
     position: absolute;
-    bottom: 30px;
+    bottom: 100px;
     // width: 95%;
     text-align: center;
 }
@@ -196,14 +236,73 @@
 //     }
 // }
 
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 992px) {
-    .container p {
-        font-size: 3vw;
+
+@media only screen and (max-width: 667px) {
+    .text {
+        bottom: 40px;
     }
+    .container {        
+        min-height: 150px;        
+    }
+    .prev, .next {        
+        top: 40%;
+    }
+
+    .main-sceiba {
+        background-image: url("/assets/icons/sceiba.top.xs.svg");
+    }
+
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
 
+.card1-header-image {
+    background-image: url('/assets/images/home/people.png');
+    background-size: cover;
+}
+
+.card2-header-image {
+    background-image: url('/assets/images/home/evaluation.png');
+    background-size: cover;
+}
+
+.card3-header-image {
+    background-image: url('/assets/images/home/folders.png');
+    background-size: cover;
+}
+
+.bgtranparent {
+    background-color: rgba(255,255,255,0.8);
+}
+
+.cards-nexts {
+    padding-top: 20px;
+    align-items: end;
+    margin-right: 0px !important;
+}
+
+
+.product1-image {
+    background-image: url("/assets/icons/catalog.svg");
+    background-size: cover;
+}
+
+.product2-image {
+    background-image: url("/assets/icons/organizacion.svg");
+    background-size: cover;
+}
+
+.product3-image {
+    background-image: url("/assets/icons/vocabs.svg");
+    background-size: cover;
+}
+
+.product4-image {
+    background-image: url("/assets/icons/mes.svg");
+    background-size: cover;
+}
+
+.white-title {
+    color: white;
+    font-size: x-large;
+    text-align: center;
 }
