--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -32,12 +32,12 @@
 }
 
 /* - typography - */
-// @font-face {
-//     font-family: 'MyriadPro Regular';
-//     src: url('assets/fonts/MyriadPro-Regular.woff') format('woff');
-//     font-weight: normal;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'MyriadPro Regular';
+    src: url('assets/fonts/MyriadPro-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 // @font-face {
 //     font-family: 'DINPro Medium';
